--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 
   &.home-page {
     margin-bottom: $margin-xlarge;
