--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,36 +1,38 @@
-<section class="home">
-  <h1 class="sr-only">Jupiter and the Giraffe</h1>
+<section class="home" #myname [class.home--active]="navIsFixed">
+  <div class="container-fluid">
+    <h1 class="sr-only">Jupiter and the Giraffe</h1>
 
-  <div class="row equal-heights home__about">
-    <section class="col-sm">
-      <header>
-        <h2>
-          <span data-aos="fade-up">Who are Jupiter <br>and the Giraffe?</span>
-        </h2>
-      </header>
+    <div class="row equal-heights home__about">
+      <section class="col-sm">
+        <header>
+          <h2>
+            <span data-aos="fade-up">Who are Jupiter <br>and the Giraffe?</span>
+          </h2>
+        </header>
 
-      <p>Jupiter and the Giraffe are a not-so-ordinary branding agency. We love all things digital to the moon and back.</p>
+        <p>Jupiter and the Giraffe are a not-so-ordinary branding agency. We love all things digital to the moon and back.</p>
 
-      <a href="" [routerLink]="['/who-we-are']">Read more</a><app-dots-component></app-dots-component>
-    </section>
-    <section class="col-sm">
-      <header>
-        <h2>
-          <span data-aos="fade-up" style="display: inline-block;" data-aos-delay="100">What we <br>do</span>
-        </h2>
-      </header>
+        <a href="" [routerLink]="['/who-we-are']">Read more</a><app-dots-component></app-dots-component>
+      </section>
+      <section class="col-sm">
+        <header>
+          <h2>
+            <span data-aos="fade-up" style="display: inline-block;" data-aos-delay="100">What we <br>do</span>
+          </h2>
+        </header>
 
-      <p>
-        We care about your brand as much as you do, we have experience in logo design and corporate identity. To finish
-        it off, we can build you a kickass website to go with it.
-      </p>
+        <p>
+          We care about your brand as much as you do, we have experience in logo design and corporate identity. To finish
+          it off, we can build you a kickass website to go with it.
+        </p>
 
-      <a href="" [routerLink]="['/what-we-do']">
-        Read more
-      </a><app-dots-component></app-dots-component>
-    </section>
+        <a href="" [routerLink]="['/what-we-do']">
+          Read more
+        </a><app-dots-component></app-dots-component>
+      </section>
+    </div>
+
+    <app-friends-component></app-friends-component>
   </div>
-
-  <app-friends-component></app-friends-component>
 </section>
 
