--- a/src/app/northstar/northstar.component.html
+++ b/src/app/northstar/northstar.component.html
@@ -1,106 +1,108 @@
-<img src="assets/images/northstar-feature.png" alt="" class="img-fluid">
-
-<section>
-  <header>
-    <h1>North Star Law - Branding and Website Design/build</h1>
-  </header>
-
-  <p>
-    North Star Law are a law-firm based in South Kensington, London who specialise in property law,
-    private client/tax and immigration law.
-  </p>
+<div class="container-fluid">
+  <img src="assets/images/northstar-feature.png" alt="" class="img-fluid">
 
   <section>
     <header>
-      <h2>The Project</h2>
+      <h1>North Star Law - Branding and Website Design/build</h1>
     </header>
 
     <p>
-      They asked us to revamp their existing website to something more modern and practical.
-      We started with an initial meeting discussing what they do as a company and what they liked and disliked about their current website.
-      Interestingly the things they liked from their website (built nearly 10 years ago) were unarguably consistent with the themes desired from today's websites.
-      It's just that they had been executed in a fashion popularised by the time (which now looked outdated).
-      Bold, striking banners, clear and clean language and professional aesthetic that doesn't undermine their services.
+      North Star Law are a law-firm based in South Kensington, London who specialise in property law,
+      private client/tax and immigration law.
     </p>
+
+    <section>
+      <header>
+        <h2>The Project</h2>
+      </header>
+
+      <p>
+        They asked us to revamp their existing website to something more modern and practical.
+        We started with an initial meeting discussing what they do as a company and what they liked and disliked about their current website.
+        Interestingly the things they liked from their website (built nearly 10 years ago) were unarguably consistent with the themes desired from today's websites.
+        It's just that they had been executed in a fashion popularised by the time (which now looked outdated).
+        Bold, striking banners, clear and clean language and professional aesthetic that doesn't undermine their services.
+      </p>
+    </section>
+
+    <section>
+      <header>
+        <h2>Designing the Site</h2>
+      </header>
+
+      <p>
+        North Star provided us with some wireframes of the structure they envisioned for the website.
+        Our designer Suzannah James was then able to take that and bring some modern flare to it.
+        We were also able to propose what we felt some redundant pages and unnecessary user steps to get to 'What we do' and 'About'.
+        Slimming down this UX was important in getting users to understanding what they did quicker and from anywhere on the site.
+        Enabling a simple dropdown in the header was an easy, elegant solution to this, answering this question on the homepage took a little more tweaking...
+      </p>
+    </section>
+
+    <section>
+      <header>
+        <h2>A New Colour</h2>
+      </header>
+
+      <p>
+        As we worked through the design, it was looking very black and white and didn't exuberate class or necessarily have an identity that made them stand out.
+        We were able to highlight an opportunity in the logo where the star being blue but hadn't really been utilised enough.
+        We explored this further and created a colour pallete which we feel had this 'class' we were looking for.
+        Highlighted with a gold and an off-white and dark grey, we think it looks great.
+      </p>
+
+      <figure class="text-center">
+        <img src="assets/images/northstar-colour.png" alt="colour pallet of grey, white, blue, gold and brown" class="img-fluid image">
+        <figcaption>Colour pallete proposed to North Star</figcaption>
+      </figure>
+
+      <p>
+        This paved the way to an exciting turn in the project which was welcomed by the client.
+        This enabled a redesign of the homepage while still being able to keep most of the existing designs on the other pages.
+        The blues and gold brought the 'old' designs to life while completely transforming the homepage.
+        We were also able to bring a call to action on the homepage to the 'What we do' page with something more exciting and inviting that what was previously discussed.
+      </p>
+
+      <figure class="text-center">
+        <img src="assets/images/northstar-site.png" alt="" class="img-fluid">
+        <figcaption>Final Northstar website design</figcaption>
+      </figure>
+
+      <p>
+        Another key ingredient to the design was the use of imagery.
+        We suggested it must be warm or gold which compliments the colour pallete aesthetically but also conveys feelings of closeness and safety which is not necessarily something associated with law and the gold conveys importance and confidence which is obviously important when dealing with law.
+      </p>
+    </section>
+
+    <section>
+      <header>
+        <h2>Looking Again at the Logo</h2>
+      </header>
+
+      <p>
+        The star was something we tried bringing to the focal point of their identity.
+        There wasn't enough emphasis taken from this from their core logo. We simplified it by removing the text 'North Star Law' as their name is clear and implied from the website domain and by the short,
+        animated introduction on the homepage but we also felt it cleaned up the design in the header and made the website less busy.
+      </p>
+    </section>
+
+    <section>
+      <header>
+        <h2>Careful Choice of Images</h2>
+      </header>
+
+      <p>
+        We feel the imagery really brings the site to life, along with the colour pallete and simple user-journeys.
+        The content is embellished through these attractive assets which makes the website a pleasure to navigate.
+        Being able to suggest a new identity to North Star Law and being met with open arms was a great thing to be a part of.
+        We're really proud of this website which we, in some ways, hope to give law a fresh, new look.
+      </p>
+
+      <p>
+        Check it out at <a href="https://northstarlaw.co.uk">northstarlaw.co.uk</a>
+      </p>
+    </section>
+
+    <app-get-in-touch></app-get-in-touch>
   </section>
-
-  <section>
-    <header>
-      <h2>Designing the Site</h2>
-    </header>
-
-    <p>
-      North Star provided us with some wireframes of the structure they envisioned for the website.
-      Our designer Suzannah James was then able to take that and bring some modern flare to it.
-      We were also able to propose what we felt some redundant pages and unnecessary user steps to get to 'What we do' and 'About'.
-      Slimming down this UX was important in getting users to understanding what they did quicker and from anywhere on the site.
-      Enabling a simple dropdown in the header was an easy, elegant solution to this, answering this question on the homepage took a little more tweaking...
-    </p>
-  </section>
-
-  <section>
-    <header>
-      <h2>A New Colour</h2>
-    </header>
-
-    <p>
-      As we worked through the design, it was looking very black and white and didn't exuberate class or necessarily have an identity that made them stand out.
-      We were able to highlight an opportunity in the logo where the star being blue but hadn't really been utilised enough.
-      We explored this further and created a colour pallete which we feel had this 'class' we were looking for.
-      Highlighted with a gold and an off-white and dark grey, we think it looks great.
-    </p>
-
-    <figure class="text-center">
-      <img src="assets/images/northstar-colour.png" alt="colour pallet of grey, white, blue, gold and brown" class="img-fluid image">
-      <figcaption>Colour pallete proposed to North Star</figcaption>
-    </figure>
-
-    <p>
-      This paved the way to an exciting turn in the project which was welcomed by the client.
-      This enabled a redesign of the homepage while still being able to keep most of the existing designs on the other pages.
-      The blues and gold brought the 'old' designs to life while completely transforming the homepage.
-      We were also able to bring a call to action on the homepage to the 'What we do' page with something more exciting and inviting that what was previously discussed.
-    </p>
-
-    <figure class="text-center">
-      <img src="assets/images/northstar-site.png" alt="" class="img-fluid">
-      <figcaption>Final Northstar website design</figcaption>
-    </figure>
-
-    <p>
-      Another key ingredient to the design was the use of imagery.
-      We suggested it must be warm or gold which compliments the colour pallete aesthetically but also conveys feelings of closeness and safety which is not necessarily something associated with law and the gold conveys importance and confidence which is obviously important when dealing with law.
-    </p>
-  </section>
-
-  <section>
-    <header>
-      <h2>Looking Again at the Logo</h2>
-    </header>
-
-    <p>
-      The star was something we tried bringing to the focal point of their identity.
-      There wasn't enough emphasis taken from this from their core logo. We simplified it by removing the text 'North Star Law' as their name is clear and implied from the website domain and by the short,
-      animated introduction on the homepage but we also felt it cleaned up the design in the header and made the website less busy.
-    </p>
-  </section>
-
-  <section>
-    <header>
-      <h2>Careful Choice of Images</h2>
-    </header>
-
-    <p>
-      We feel the imagery really brings the site to life, along with the colour pallete and simple user-journeys.
-      The content is embellished through these attractive assets which makes the website a pleasure to navigate.
-      Being able to suggest a new identity to North Star Law and being met with open arms was a great thing to be a part of.
-      We're really proud of this website which we, in some ways, hope to give law a fresh, new look.
-    </p>
-
-    <p>
-      Check it out at <a href="https://northstarlaw.co.uk">northstarlaw.co.uk</a>
-    </p>
-  </section>
-
-  <app-get-in-touch></app-get-in-touch>
-</section>
+</div>
