--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,4 +1,6 @@
-<h1>Sorry</h1>
-<h2>404: Page not found</h2>
+<div class="container-fluid">
+  <h1>Sorry</h1>
+  <h2>404: Page not found</h2>
 
-<p>Go <a [routerLink]="['/']">home</a>?<app-dots-component></app-dots-component></p>
+  <p>Go <a [routerLink]="['/']">home</a>?<app-dots-component></app-dots-component></p>
+</div>
