--- a/src/app/who/who.component.html
+++ b/src/app/who/who.component.html
@@ -1,33 +1,35 @@
-<section class="section">
-  <header>
-    <h2>Who we are</h2>
-  </header>
-  <p>
-    Jupiter and the Giraffe have never let anyone down and don't ever intend to. Delivering projects with unprecedented enthusiasm,
-    we make sure your experience with us is a memorable one.
-  </p>
+<div class="container-fluid">
+  <section class="section">
+    <header>
+      <h2>Who we are</h2>
+    </header>
+    <p>
+      Jupiter and the Giraffe have never let anyone down and don't ever intend to. Delivering projects with unprecedented enthusiasm,
+      we make sure your experience with us is a memorable one.
+    </p>
 
-  <p>
-    Unashamedly bold and not afraid to be weird,
-    it's crucial that our portfolio demonstrations that we are as professional as we are kooky and we take our work very seriously.
-    We take pride in our ressiliant attention to detail,
-    our commitment to the brands and people we work with and focus on making sure everything we do is the best that it can be.
-  </p>
+    <p>
+      Unashamedly bold and not afraid to be weird,
+      it's crucial that our portfolio demonstrations that we are as professional as we are kooky and we take our work very seriously.
+      We take pride in our ressiliant attention to detail,
+      our commitment to the brands and people we work with and focus on making sure everything we do is the best that it can be.
+    </p>
 
-  <p>
-    Jupiter and the Giraffe love all things digital and especially love a challenge.
-    Much of the work undertaken is simply a case of saying "Why not?". We never snuff our noses at an idea, no matter how bizarre.
-    Simply call us up or email telling us your project and we'll consider it.
-  </p>
+    <p>
+      Jupiter and the Giraffe love all things digital and especially love a challenge.
+      Much of the work undertaken is simply a case of saying "Why not?". We never snuff our noses at an idea, no matter how bizarre.
+      Simply call us up or email telling us your project and we'll consider it.
+    </p>
 
-  <div class="media">
-    <div class="media-left">
-      <img class="media-object" [src]="'assets/images/founder.jpg'" alt="" [srcset]="'assets/images/founder.jpg 1x, assets/images/founder@2x.jpg 2x'">
+    <div class="media">
+      <div class="media-left">
+        <img class="media-object" [src]="'assets/images/founder.jpg'" alt="" [srcset]="'assets/images/founder.jpg 1x, assets/images/founder@2x.jpg 2x'">
+      </div>
+      <div class="media-body media-bottom">
+        <h3 class="media-heading">Samuel Gregory</h3>
+        - Founder <br>
+        <a href="mailto:samuel@jupiterandthegiraffe.com">samuel@jupiterandthegiraffe.com</a>
+      </div>
     </div>
-    <div class="media-body media-bottom">
-      <h3 class="media-heading">Samuel Gregory</h3>
-      - Founder <br>
-      <a href="mailto:samuel@jupiterandthegiraffe.com">samuel@jupiterandthegiraffe.com</a>
-    </div>
-  </div>
-</section>
+  </section>
+</div>
