--- a/src/app/home/friends/friends.component.html
+++ b/src/app/home/friends/friends.component.html
@@ -13,13 +13,21 @@
         data-aos="fade-up"
         [attr.data-aos-delay]="i * 150"
     >
-      <a [routerLink]="friend.page" class="friends__link">
+      <a [routerLink]="friend.page" class="friends__link" *ngIf="friend.page; else noLink;">
         <img
           class="img-fluid friends__image"
           src="assets/images/{{ friend.img }}.png"
           srcset="assets/images/{{friend.img}}.png 1x, assets/images/{{friend.img}}@2x.png 2x"
           [attr.alt]="friend.name">
       </a>
+      <ng-template #noLink>
+        <img
+          class="img-fluid friends__image"
+          src="assets/images/{{ friend.img }}.png"
+          srcset="assets/images/{{friend.img}}.png 1x, assets/images/{{friend.img}}@2x.png 2x"
+          [attr.alt]="friend.name">
+      </ng-template>
+
     </li>
   </ul>
 </section>
