--- a/src/app/what/what.component.html
+++ b/src/app/what/what.component.html
@@ -1,54 +1,55 @@
-<section class="what-we-do">
-  <header>
-    <h1 class="sr-only">What we do</h1>
-  </header>
-
-  <p class="what-we-do__tagline">
-    We'll help your company find its voice, establish its brand and build you a kick ass website.
-  </p>
-
-  <section class="section">
+<div class="container-fluid">
+  <section class="what-we-do">
     <header>
-      <h2>Brand</h2>
+      <h1 class="sr-only">What we do</h1>
     </header>
 
-    <p>
-      Like you, we believe brand aesthetics are the most important thing and it all starts with your logo.
-      Something engaging, unique and most importantly you!
-      A logo tells much about who you are in the shortest time so getting this right can make or break your business.
+    <p class="what-we-do__tagline">
+      We'll help your company find its voice, establish its brand and build you a kick ass website.
     </p>
 
-    <p>
-      We’re all about sculpting your brand identity around your logo, combining wicked typography,
-      striking colours, tone of voice and brand strategy in an exciting, elegantly built design.
-      We're not messing around.
-    </p>
+    <section class="section">
+      <header>
+        <h2>Brand</h2>
+      </header>
 
-    <p>
-      <a [routerLink]="['/contact']">Contact us</a> if your brand needs a fresh new pair of trainers
-    </p>
+      <p>
+        Like you, we believe brand aesthetics are the most important thing and it all starts with your logo.
+        Something engaging, unique and most importantly you!
+        A logo tells much about who you are in the shortest time so getting this right can make or break your business.
+      </p>
+
+      <p>
+        We’re all about sculpting your brand identity around your logo, combining wicked typography,
+        striking colours, tone of voice and brand strategy in an exciting, elegantly built design.
+        We're not messing around.
+      </p>
+
+      <p>
+        <a [routerLink]="['/contact']">Contact us</a> if your brand needs a fresh new pair of trainers
+      </p>
+    </section>
+
+    <section class="section">
+      <header>
+        <h2>Websites</h2>
+      </header>
+        <p>
+          You know your website must stand out.
+          We’re here to take your brand and build an online experience that turns heads.
+          We pride ourselves in writing clean, maintainable code on a platform you can trust using the latest technologies.
+          We’re confident we can build the site you need, using elegant user experience (UX),
+          optimising it for search engines (SEO) and making it accessible to all. We have your users in mind.
+        </p>
+
+        <p>
+          From our years of experience in the industry, using technologies such as React,
+          Angular and Vue or building brochure sites to complete eCommerce and Wordpress systems are a piece of cake
+        </p>
+
+        <p>
+          Whatever your challenge, we'd love to talk to you about it so <a [routerLink]="['/contact']">contact us</a>!
+        </p>
+    </section>
   </section>
-
-  <section class="section">
-    <header>
-      <h2>Websites</h2>
-    </header>
-      <p>
-        You know your website must stand out.
-        We’re here to take your brand and build an online experience that turns heads.
-        We pride ourselves in writing clean, maintainable code on a platform you can trust using the latest technologies.
-        We’re confident we can build the site you need, using elegant user experience (UX),
-        optimising it for search engines (SEO) and making it accessible to all. We have your users in mind.
-      </p>
-
-      <p>
-        From our years of experience in the industry, using technologies such as React,
-        Angular and Vue or building brochure sites to complete eCommerce and Wordpress systems are a piece of cake
-      </p>
-
-      <p>
-        Whatever your challenge, we'd love to talk to you about it so <a [routerLink]="['/contact']">contact us</a>!
-      </p>
-  </section>
-</section>
-
+</div>
