--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,47 +1,49 @@
-<section class="section">
-  <header>
-    <h2>Projects</h2>
-  </header>
-  <p>
-    Feast your eyes on the projects we've enjoyed and read about what we've done.
-  </p>
-  <div [ngSwitch]="error?.status">
-    <h3 *ngSwitchCase="404">
-      {{error.status}}: {{ error.statusText }}
-    </h3>
-    <ul class="row work" *ngSwitchDefault="">
-      <li class="col-md-4 col-sm-6 work__item" *ngFor="let workItem of work.work; let i = index" data-aos="fade-up" [attr.data-aos-delay]="i * 150">
-        <a *ngIf="workItem.link; else noLink" [routerLink]="workItem.link">
-          <img
-            *ngIf="workItem.image"
-            [src]="'assets/images/' + workItem.image"
-            alt="{{workItem.title}}"
-            class="img-thumbnail"
-          />
-          <h3>{{workItem.title}}</h3>
-          <h4>The brief:</h4>
-          <p>{{workItem.content}}</p>
+<div class="container-fluid">
+  <section class="section">
+    <header>
+      <h2>Projects</h2>
+    </header>
+    <p>
+      Feast your eyes on the projects we've enjoyed and read about what we've done.
+    </p>
+    <div [ngSwitch]="error?.status">
+      <h3 *ngSwitchCase="404">
+        {{error.status}}: {{ error.statusText }}
+      </h3>
+      <ul class="row work" *ngSwitchDefault="">
+        <li class="col-md-4 col-sm-6 work__item" *ngFor="let workItem of work.work; let i = index" data-aos="fade-up" [attr.data-aos-delay]="i * 150">
+          <a *ngIf="workItem.link; else noLink" [routerLink]="workItem.link">
+            <img
+              *ngIf="workItem.image"
+              [src]="'assets/images/' + workItem.image"
+              alt="{{workItem.title}}"
+              class="img-thumbnail"
+            />
+            <h3>{{workItem.title}}</h3>
+            <h4>The brief:</h4>
+            <p>{{workItem.content}}</p>
 
-          <p>View case study<app-dots-component></app-dots-component></p>
-        </a>
+            <p>View case study<app-dots-component></app-dots-component></p>
+          </a>
 
-        <ng-template #noLink>
-          <img
-            *ngIf="workItem.image"
-            [src]="'assets/images/' + workItem.image"
-            alt="{{workItem.title}}"
-            class="img-thumbnail"
-          />
-          <h3>{{workItem.title}}</h3>
-          <h4>The brief:</h4>
-          <p>{{workItem.content}}</p>
-        </ng-template>
+          <ng-template #noLink>
+            <img
+              *ngIf="workItem.image"
+              [src]="'assets/images/' + workItem.image"
+              alt="{{workItem.title}}"
+              class="img-thumbnail"
+            />
+            <h3>{{workItem.title}}</h3>
+            <h4>The brief:</h4>
+            <p>{{workItem.content}}</p>
+          </ng-template>
 
 
-        <ul class="work__tags">
-          <li *ngFor="let tag of workItem.tags" class="work__tag">{{ tag }}</li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-</section>
+          <ul class="work__tags">
+            <li *ngFor="let tag of workItem.tags" class="work__tag">{{ tag }}</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </section>
+</div>
