add blogs to homepage

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,32 +17,37 @@
       <ul class="footer__social list-unstyled list-inline">
         <li>
           <a href="https://www.linkedin.com/company/jupiter-and-the-giraffe/" class="link-plain footer__social-link" title="Jupiter and the Giraffe Linkedin profile">
-            <i class="icon-linkedin"></i>
+            <i class="icon-linkedin" aria-hidden="true"></i>
           </a>
         </li>
         <li>
           <a href="https://instagram.com/jupiterandthegiraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Instagram profile">
-            <i class="icon-instagram"></i>
+            <i class="icon-instagram" aria-hidden="true"></i>
           </a>
         </li>
         <li>
           <a href="https://twitter.com/jupiter_giraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Twitter profile">
-            <i class="icon-twitter"></i>
+            <i class="icon-twitter" aria-hidden="true"></i>
           </a>
         </li>
         <li>
           <a href="https://facebook.com/jupiterandthegiraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Facebook profile">
-            <i class="icon-facebook"></i>
+            <i class="icon-facebook" aria-hidden="true"></i>
           </a>
         </li>
         <li>
           <a href="https://pinterest.co.uk/jupiterandthegiraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Pinterest profile">
-            <i class="icon-pinterest"></i>
+            <i class="icon-pinterest" aria-hidden="true"></i>
           </a>
         </li>
         <li>
           <a href="https://www.behance.net/JupiterandtheGiraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Behance profile">
-            <i class="icon-behance"></i>
+            <i class="icon-behance" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://blog.jupiterandthegiraffe.com" class="link-plain footer__social-link" title="Jupiter and the Giraffe Blog">
+            <i class="fab fa-wordpress" aria-hidden="true"></i>
           </a>
         </li>
       </ul>
