--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,6 +33,40 @@
     </div>
 
     <app-friends-component></app-friends-component>
+
+    <section class="home__blog">
+      <header>
+        <h2>Blog</h2>
+      </header>
+      <div *ngIf="blogs.length; else error;">
+        <p>Read our latest blogs.</p>
+
+        <div class="row">
+          <section *ngFor="let blog of blogs;"  class="home__blog col-md">
+            <header>
+              <h3>
+                <a [href]="blog.blog.link">{{blog.blog.title.rendered}}</a>
+              </h3>
+            </header>
+
+            <a [href]="blog.blog.link">
+              <div class="home__blog-image" *ngIf="blog.image.source_url" [ngStyle]="{'background-image': 'url(' + blog.image.source_url + ')'}"></div>
+            </a>
+
+            <div class="home__blog-info">By <a [href]="blog.author.link"><strong>{{blog.author.name}}</strong></a> on <strong>{{blog.date[1]}}.{{blog.date[2]}}.{{blog.date[0]}}</strong></div>
+
+            <div [innerHTML]="blog.blog.excerpt.rendered"></div>
+          </section>
+        </div>
+
+        <a href="https://blog.jupiterandthegiraffe.com">Read more on our blog</a><app-dots-component></app-dots-component>
+      </div>
+
+      <ng-template #error>
+        <p>{{error}}</p>
+      </ng-template>
+    </section>
+
   </div>
 </section>
 
