--- a/src/assets/sass/_icons.scss
+++ b/src/assets/sass/_icons.scss
@@ -13,6 +13,20 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.fab {
+  font-family: 'fontawesome';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .icon-facebook:before {
   content: "\ea90";
 }
