--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="home" #myname [class.home--active]="navIsFixed">
+<section class="home">
   <div class="container-fluid">
     <h1 class="sr-only">Jupiter and the Giraffe</h1>
 
